--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 language: node_js
 node_js: lts/*
-sudo: false
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
-  - export PATH=$HOME/.yarn/bin:$PATH
-cache:
-  yarn: true
 install:
-  - yarn install
+  - npm install
 script:
-  - yarn website:build
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github-token: $GITHUB_TOKEN
-  on:
-    branch: next
-  local-dir: packages/react-impression-website/dist
+  - npm run public
+after_script:
+  - cd ./resume
+  - git init
+  - git config user.name "wjeek"
+  - git config user.email "1248997541@qq.com"
+  - git add .
+  - git commit -m "Update docs"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+branches:
+  only:
+    - resume
+env:
+ global:
+   - GH_REF: github.com/wjeek/wjeek.github.io.git
