--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ install:
 script:
   - npm run public
 after_script:
-  - cd ./resume
   - git init
   - git config user.name "wjeek"
   - git config user.email "1248997541@qq.com"
-  - git add .
+  - git add resume/
   - git commit -m "Update docs"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
 branches:
