--- a/data.yaml
+++ b/data.yaml
@@ -5,7 +5,7 @@ nickname: wjeek
 meta_content: 两年前端经验
 keywords: 王金,前端,工作,简历
 ga_id: 'UA-92595311-1'
-age: 24岁
+age: 24
 gender: 男
 school: 大连理工大学
 profession: 软件工程
