--- a/data.yaml
+++ b/data.yaml
@@ -14,8 +14,7 @@ english_level: CET-6
 blog: http://wjeek.top/
 github: https://www.github.com/wjeek
 website:
-online: https://xiao555.github.io/Resume/
-print: https://xiao555.github.io/Resume/print.html
+online: https://wjeek.github.io/resume/
 apply_to_position: 前端工程师
 contact: # 联系方式
   -
