--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ after_script:
   - git config user.name "wjeek"
   - git config user.email "1248997541@qq.com"
   - git add dist/
+  - git status
   - git commit -m "Update docs"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
 branches:
