--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_script:
   - git add dist/
   - git status
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" origin:master
 branches:
   only:
     - resume
